2024-07-04  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.7-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.7-alpha04: Fake Orangina';git push
	git tag -a 5.2.7-alpha04 -m '';git push --tags

	* nco_get_var()/nco_get_vara()/nco_inq_varid() print filename where error occurs
	Helps disambiguate in which file things go wrong for MFOs

2024-07-03  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.7-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.7-alpha03: 11th Hour';git push
	git tag -a 5.2.7-alpha03 -m 'ncremap: fix flg_dst_mpt which fixes --add_fll, CAAS stubs';git push --tags

	* Correct index subscript in revamped implementation of	flg_dst_mpt. Fixes issue Xylar noticed.

2024-06-28  Charlie Zender  <zender@uci.edu>

	* CAAS: Obtain dimension sizes from nonlinear map-file

2024-06-27  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.7-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.7-alpha02: Stroker';git push
	git tag -a 5.2.7-alpha02 -m 'all: qnt lossy_compresion->quantization, dpr family; ncremap wrn->nfo, CAAS stb';git push --tags

	* Open nonlinear map when present

	* Add stubs to pass/free non-linear map name for CAAS to regridder with --rgr_nlm

	* Incorporate Jonathan Gregory suggestions in quantization metadata (and re-submit CF PR)

2024-06-26  Charlie Zender  <zender@uci.edu>

	* nco_rgr_wgt()/nco_ntp_vrt() Weaken WARNING to (expanded) INFO when no variables found to regrid/interpolate

2024-06-25  Charlie Zender  <zender@uci.edu>

	* Update regression tests, including one that failed due to quantization being crd-like variable

	* Deprecate "family" attribute from quantization container variable

	* Migrate from container variable name from "lossy_compression" to "quantization"

	* NCO 5.2.7-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.7-alpha01: Nordheimer';git push
	git tag -a 5.2.7-alpha01 -m 'Functionally identical to 5.2.6';git push --tags
